--- a/case-studies/pixel.html
+++ b/case-studies/pixel.html
@@ -7,6 +7,57 @@
     <link rel="stylesheet" href="../css/style.css"/>
 </head>
 <body class="case-studies">
+    <div class="overlaying-navigation">
+        <input type="checkbox" class="overlaying-navigation__checkbox" id='navi-toggle'>
+        <label for="navi-toggle" class="overlaying-navigation__button">
+            <span class="overlaying-navigation__icon">&nbsp;</span>
+        </label>
+        <div class="overlaying-navigation__background">&nbsp;</div>
+        <div class="overlaying-navigation__nav">
+            <div class="overlaying-navigation__nav-item u-margin-top-mid">
+                <ul class="overlaying-navigation__list">
+                    <li class="overlaying-navigation__list-item"><a href="" class="overlaying-navigation__link">Home</a></li>
+                    <li class="overlaying-navigation__list-item"><a href="" class="overlaying-navigation__link">Portfolio</a></li>
+                    <li class="overlaying-navigation__list-item"><a href="" class="overlaying-navigation__link">Services</a></li>
+                    <li class="overlaying-navigation__list-item"><a href="" class="overlaying-navigation__link">Testimonials</a></li>
+                    <li class="overlaying-navigation__list-item"><a href="" class="overlaying-navigation__link">Contact</a></li>
+                </ul>
+            </div>
+            <div class="overlaying-navigation__nav-item overlaying-navigation__nav-item--column">
+                <span class="overlaying-navigation__link overlaying-navigation__link--mid u-padding-top-btm-async u-border-top-green">Let's create some magic</span>
+                <a href="" class="button button--green footer__button footer__link">Inquire</a>
+            </div>
+            <div class="overlaying-navigation__nav-item u-margin-bottom-mid">
+                <ul class="footer__list footer__list--standalone">
+                    <li class="footer__list-item">
+                        <a href="#" class="footer__link">
+                            <img src="../img/svg/instagram.svg" alt="" class="footer__social-media">
+                        </a>
+                    </li>
+                    <li class="footer__list-item">
+                        <a href="#" class="footer__link">
+                            <img src="../img/svg/behance.svg" alt="" class="footer__social-media">
+                        </a>
+                    </li>
+                    <li class="footer__list-item">
+                        <a href="#" class="footer__link">
+                            <img src="../img/svg/dribble.svg" alt="" class="footer__social-media">
+                        </a>
+                    </li>
+                    <li class="footer__list-item">
+                        <a href="#" class="footer__link">
+                            <img src="../img/svg/linkedin.svg" alt="" class="footer__social-media">
+                        </a>
+                    </li>
+                    <li class="footer__list-item">
+                        <a href="#" class="footer__link">
+                            <img src="../img/svg/facebook.svg" alt="" class="footer__social-media">
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
     <header class="header">
         <div class="menu"> 
             <div class="menu__logo">
@@ -23,12 +74,11 @@
             </nav>
         </div>
         <div class="case-study">
-            <div class="case-study__cover">
-                <img src="" alt="" class="case-study__cover-image">
-                <div class="case-study__arrow-container case-study__arrow-container--left">
+            <div id="hero-image" style="background-image: url(../img/covers/hero-mayhem.png)" class="case-study__cover">
+                <div id="left-arrow" class="case-study__arrow-container case-study__arrow-container--left">
                     <img src="../img/svg/arrow-left.svg" alt="" class="case-study__arrow case-study__arrow--left">
                 </div>
-                <div class="case-study__arrow-container case-study__arrow-container--right">
+                <div id="right-arrow" class="case-study__arrow-container case-study__arrow-container--right">
                     <img src="../img/svg/arrow-right.svg" alt="" class="case-study__arrow case-study__arrow--right">
                 </div>
             </div>
@@ -233,3 +283,45 @@
         </div>
     </footer>
 </body>
+
+<script>
+    disableScrollOnNavigationHamburger();
+    const leftArrow = document.getElementById('left-arrow');
+    const rightArrow = document.getElementById('right-arrow');
+    const heroImage = document.getElementById('hero-image');
+    let heroImagePositions = ["left", "center", "right"];
+    heroImage.setAttribute('data-position','center');
+
+    leftArrow.addEventListener('click',ev=>{
+        moveImage('left');
+    });
+
+    rightArrow.addEventListener('click',ev=>{
+        moveImage('right');
+    })
+
+    function moveImage(direction){
+        const currPosition = heroImage.dataset.position;
+
+        const newPositionIndex = direction == 'left' ? 
+        heroImagePositions.indexOf(currPosition) - 1 
+        : heroImagePositions.indexOf(currPosition) + 1;
+
+        if(newPositionIndex < 0 || 
+            newPositionIndex > (heroImagePositions.length-1))
+            return;
+
+        heroImage.dataset.position = heroImagePositions[newPositionIndex];
+    }
+
+    function disableScrollOnNavigationHamburger(){
+        const navigation = document.getElementById('navi-toggle');
+        navigation.addEventListener('click',()=>{
+        if(document.body.style.overflow == 'hidden')
+            document.body.style.overflow = 'visible'
+        else
+            document.body.style.overflow = "hidden"
+        })
+    }
+
+</script>
