--- a/testimonials/re-active.html
+++ b/testimonials/re-active.html
@@ -252,8 +252,19 @@
 </footer>
 </body>
 <script>
+    disableScrollOnNavigationHamburger();
+    
     let clientsSlide = document.getElementById('clients-slide');
     let copy = clientsSlide.cloneNode(true);
     clientsSlide.parentNode.appendChild(copy);
 
+    function disableScrollOnNavigationHamburger(){
+        const navigation = document.getElementById('navi-toggle');
+        navigation.addEventListener('click',()=>{
+        if(document.body.style.overflow == 'hidden')
+            document.body.style.overflow = 'visible'
+        else
+            document.body.style.overflow = "hidden"
+        })
+    }
 </script>
