--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         <div class="overlaying-navigation__nav">
             <div class="overlaying-navigation__nav-item u-margin-top-mid">
                 <ul class="overlaying-navigation__list">
-                    <li class="overlaying-navigation__list-item"><a href="" class="overlaying-navigation__link">Home</a></li>
-                    <li class="overlaying-navigation__list-item"><a href="" class="overlaying-navigation__link">Portfolio</a></li>
+                    <li class="overlaying-navigation__list-item"><a href="./index.html" class="overlaying-navigation__link">Home</a></li>
+                    <li class="overlaying-navigation__list-item"><a href="./links/portfolio.html" class="overlaying-navigation__link">Portfolio</a></li>
                     <li class="overlaying-navigation__list-item"><a href="" class="overlaying-navigation__link">Services</a></li>
                     <li class="overlaying-navigation__list-item"><a href="" class="overlaying-navigation__link">Testimonials</a></li>
                     <li class="overlaying-navigation__list-item"><a href="" class="overlaying-navigation__link">Contact</a></li>
@@ -123,8 +123,8 @@
                     </div>
                     <nav class="navigation">
                         <ul class="navigation__list">
-                            <li class="navigation__item"><a href="" class="navigation__link">Home</a></li>
-                            <li class="navigation__item"><a href="" class="navigation__link">Portfolio</a></li>
+                            <li class="navigation__item"><a href="./index.html" class="navigation__link">Home</a></li>
+                            <li class="navigation__item"><a href="./links/portfolio.html" class="navigation__link">Portfolio</a></li>
                             <li class="navigation__item"><a href="" class="navigation__link">Services</a></li>
                             <li class="navigation__item"><a href="" class="navigation__link">Testimonials</a></li>
                             <li class="navigation__item"><a href="" class="navigation__link">Contact</a></li>
